# rustfy

./: .gitignore  Cargo.toml  README.md  build.rs  meson.build  sync-resources.sh
data/: meson.build  rustfy.gresource  rustfy.gresource.xml
data/ui/: main_window.blp  meson.build  preferences.blp
data/ui/revealers/: apps_revealer.blp  calculator_revealer.blp  file_revealer.blp  web_search_revealer.blp
src/: apps.rs  config.rs  enums.rs  keyboard.rs  main.rs  resources.rs  rustfy.rs  selector.rs
src/ui/: main_window.rs  mod.rs  style.css  window.rs
src/ui/revealers/: applications.rs  apps_revealer.rs  calculator_revealer.rs  files.rs  mod.rs  web_search.rs
src/utils/: applications.rs  mod.rs  web_browser.rs  workspaces.rs
src/wrappers/: app_info.rs
