[package]
name = "rustfy"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9", package = "gtk4" }
gtk4-layer-shell = "0.5.0"
glib = "0.20.12"
chrono = "0.4.41"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
fuzzy-matcher = "0.3.7"
meval = "0.2.0"
